Regression: Node border snap guide line not drawing properly #100632

Closed
opened 2022-08-25 22:34:14 +02:00 by Leon Schittek · 8 comments
Member

System Information
Operating system: macOS-11.6.5-x86_64-i386-64bit 64 Bits
Graphics card: Intel Iris OpenGL Engine Intel Inc. 4.1 INTEL-16.5.9

Blender Version
Broken version: 3.4.0 Alpha, branch: master, commit date: 2022-08-25 09:50, hash: d4764a385a
Broken version: 3.3.0 Alpha, branch: master, commit date: 2022-05-11 16:29, hash: 8d9d5da137
Worked: 3.0.0, 3.2
Changed in d2271cf939

Short description of error
The guide line indicating the aligned borders of node when using the node edge snapping modes is not drawn properly.
Sometimes it's drawn very lightly (top screenshot), sometimes it's not visible at all (bottom screenshot).

3.0.0 (worked) 3.4.0 (broken)
300_edge-snapping.jpg Bildschirmfoto 2022-08-25 um 22.26.08.png
Bildschirmfoto 2022-08-25 um 22.26.55.png

Exact steps for others to reproduce the error

  1. Open default startup file.
  2. Go to the shader editor.
  3. Activate snapping in the shader editor and set snapping mode to Node X, Node Y or `Node X/Y``
  4. Move one node so it snaps to the border of another

Result: The node will snap properly but the line indicating the snap is not drawn won't be visible.

**System Information** Operating system: macOS-11.6.5-x86_64-i386-64bit 64 Bits Graphics card: Intel Iris OpenGL Engine Intel Inc. 4.1 INTEL-16.5.9 **Blender Version** Broken version: 3.4.0 Alpha, branch: master, commit date: 2022-08-25 09:50, hash: `d4764a385a` Broken version: 3.3.0 Alpha, branch: master, commit date: 2022-05-11 16:29, hash: `8d9d5da137` Worked: 3.0.0, 3.2 Changed in d2271cf939 **Short description of error** The guide line indicating the aligned borders of node when using the node edge snapping modes is not drawn properly. Sometimes it's drawn very lightly (top screenshot), sometimes it's not visible at all (bottom screenshot). |3.0.0 (worked)|3.4.0 (broken)| | -- | -- | |![300_edge-snapping.jpg](https://archive.blender.org/developer/F13417293/300_edge-snapping.jpg)|![Bildschirmfoto 2022-08-25 um 22.26.08.png](https://archive.blender.org/developer/F13417295/Bildschirmfoto_2022-08-25_um_22.26.08.png)| ||![Bildschirmfoto 2022-08-25 um 22.26.55.png](https://archive.blender.org/developer/F13417305/Bildschirmfoto_2022-08-25_um_22.26.55.png)| **Exact steps for others to reproduce the error** 1) Open default startup file. 2) Go to the shader editor. 3) Activate snapping in the shader editor and set snapping mode to `Node X`, `Node Y` or `Node X/Y`` 4) Move one node so it snaps to the border of another Result: The node will snap properly but the line indicating the snap is not drawn won't be visible.
Author
Member

Added subscriber: @lone_noel

Added subscriber: @lone_noel
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

I'm not able to replicate this. Line color is different compared to 3.2 (and prior versions) but it's visible. I'll find when it was changed
untitled.png

I'm not able to replicate this. Line color is different compared to 3.2 (and prior versions) but it's visible. I'll find when it was changed ![untitled.png](https://archive.blender.org/developer/F13417925/untitled.png)
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @mano-wii

Added subscriber: @mano-wii
Member

git bisect points me to- d2271cf939
@mano-wii , can you check?

git bisect points me to- d2271cf939 @mano-wii , can you check?
Pratik Borhade changed title from Node Editor: Node border snap guide line not drawing properly to Regression: Node border snap guide line not drawing properly 2022-08-26 06:11:27 +02:00
Germano Cavalcante was assigned by Julian Eisel 2022-08-26 16:44:41 +02:00

This issue was referenced by 0c8de0eb3b

This issue was referenced by 0c8de0eb3b30dc7d2f1ee72f6fcc60572624a44f

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#100632
No description provided.