Fix T100632: Regression: Node border snap guide line not drawing properly

Caused by {rBd2271cf93926}.

Color values were being used without being initialized.